# astro_calc

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Astral_llm_implementation.md  BASIC_PAYLOAD_IMPLEMENTATION.md  Cargo.toml  RAILGUARD.md  TABLES_DEV_NOTES.md  TABLES_MANQUANTES_AJOUTEES.md  astral_house_axis_definitions.json  astral_interpretation_adapter_rules.json  astral_interpretation_signal_types.json  astral_planet_interpretation_profiles.json  astral_point_aliases.json  astral_point_calculation_variants.json  docker-compose.legacy-cutover.yml  docker-compose.yml  request-premium-minimal.json  request-premium-plus-rich.json  request-premium-rich.json  request-premium.json
astral_calculator/: Cargo.toml  RAILGUARD.md  README.md
astral_calculator/schemas/: astro_simplified_natal_response_v1.schema.json  horoscope_calculation_response_v1.schema.json  horoscope_period_calculation_request.schema.json  horoscope_period_calculation_request_v1.schema.json  horoscope_period_calculation_response.schema.json  horoscope_period_calculation_response_v1.schema.json  llm_projection_natal_simplified_v1.schema.json  natal_structured_v10.schema.json  natal_structured_v12.schema.json  natal_structured_v9.schema.json
astral_calculator/src/: aspects.rs  catalog.rs  cli.rs  db.rs  dignities.rs  domain.rs  engine_env.rs  ephemeris.rs  facts.rs  lib.rs  llm_projection.rs  main.rs  models.rs  payload.rs  payload_rules.rs  payload_shared.rs  repositories.rs  signals.rs
astral_calculator/src/application/: calculation_references.rs  chart_context.rs  mod.rs  natal_runtime_service.rs  ports.rs  transient_chart.rs
astral_calculator/src/application/ports/: horoscope_builder.rs
astral_calculator/src/astrology/: angles.rs  aspects.rs  ephemeris.rs  house_geometry.rs  mod.rs  motion.rs  swisseph_runtime.rs  transits.rs  validation.rs  zodiac.rs
astral_calculator/src/bootstrap/: cli.rs  db.rs  env.rs  mod.rs
astral_calculator/src/domain/: catalogs.rs  chart_facts.rs  mod.rs  natal_input.rs  payload.rs  references.rs  scoring.rs
astral_calculator/src/engine/: calculation_refs.rs  env.rs  mod.rs  request.rs  resolve.rs  response.rs
astral_calculator/src/engine/application/: mod.rs  runtime_facade_service.rs
astral_calculator/src/engine/projection/: axis_labels.rs  builder.rs  clean_text.rs  dynamics.rs  humanize.rs  mod.rs  profiles.rs  types.rs
astral_calculator/src/engine_env/: calculation_refs.rs  mod.rs
astral_calculator/src/features/: mod.rs
astral_calculator/src/horoscope/: builders.rs  contracts.rs  daily.rs  mod.rs  period.rs
astral_calculator/src/infra/: mod.rs
astral_calculator/src/llm_projection/: axis_labels.rs  builder.rs  clean_text.rs  dynamics.rs  humanize.rs  mod.rs  profiles.rs
astral_calculator/src/natal/: aspects.rs  dignities.rs  ephemeris.rs  mod.rs  validate.rs
astral_calculator/src/payload/: accidental_dignities.rs  angles.rs  chart_context.rs  dignities.rs  house_axes.rs  reading_plan.rs  rulership.rs  signal_filters.rs
astral_calculator/src/payload_rules/: angles.rs  chart_context.rs  lunar_phase.rs  rulership.rs
astral_calculator/src/payload_shared/: house_axes.rs  mod.rs  text.rs  visibility.rs
astral_calculator/src/runtime/: compat.rs  mod.rs  payload_freshness.rs  references.rs  service.rs
astral_calculator/src/shared/: astro_math.rs  error.rs  idempotency.rs  mod.rs  time.rs
astral_calculator/src/signals/: aspect_signals.rs  clusters.rs  dignity_helpers.rs  limits.rs  mod.rs  positions.rs  relations.rs
astral_calculator/src/simplified/: catalog.rs  ephemeris_calc.rs  facts.rs  mod.rs  payload.rs  repository.rs  resolve.rs  response.rs  service.rs
astral_calculator_api/: Cargo.toml
astral_calculator_api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  reference_status.rs  routes.rs  schema_registry.rs
astral_calculator_http/: Cargo.toml
astral_calculator_http/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  reference_status.rs  routes.rs  schema_registry.rs  state.rs
astral_contracts/: Cargo.toml
astral_contracts/src/: common.rs  lib.rs  natal.rs  services.rs
astral_gateway/: Cargo.toml
astral_gateway/src/: clients.rs  config.rs  contracts.rs  error.rs  horoscope.rs  lib.rs  main.rs  natal.rs  ports.rs  routes.rs  state.rs
astral_llm/: Cargo.toml  RAILGUARD.md  README.md
astral_llm/crates/astral_llm_api/: Cargo.toml
astral_llm/crates/astral_llm_application/: Cargo.toml
astral_llm/crates/astral_llm_domain/: Cargo.toml
astral_llm/crates/astral_llm_infra/: Cargo.toml
astral_llm/crates/astral_llm_providers/: Cargo.toml
astral_llm/crates/astral_llm_worker/: Cargo.toml
astral_llm/src/: lib.rs
astral_time_window/: Cargo.toml
astral_time_window/src/: lib.rs  time_window.rs
rust_sqlx_connection_test/: Cargo.toml  README.md
rust_sqlx_connection_test/schemas/: basic_natal_structured_v8.schema.json  llm_projection_natal_v1.schema.json  natal_structured_v10.schema.json  natal_structured_v11.schema.json  natal_structured_v13.schema.json  natal_structured_v9.schema.json
rust_sqlx_connection_test/src/: aspects.rs  catalog.rs  cli.rs  config.rs  db.rs  dignities.rs  domain.rs  ephemeris.rs  facts.rs  idempotency.rs  lib.rs  main.rs  models.rs  payload.rs  repositories.rs  runtime.rs  signals.rs
rust_sqlx_connection_test/src/engine/: mod.rs  request.rs  resolve.rs
rust_sqlx_connection_test/src/engine_env/: mod.rs
rust_sqlx_connection_test/src/llm_projection/: axis_labels.rs  builder.rs  humanize.rs  mod.rs  profiles.rs  types.rs
rust_sqlx_connection_test/src/payload/: accidental_dignities.rs  chart_context.rs  contract.rs  dignities.rs  drafting_plan.rs  emphasis.rs  house_axes.rs  json.rs  lunar_phase.rs  mod.rs  rulership.rs  signal_filters.rs
rust_sqlx_connection_test/src/runtime/: error.rs  mod.rs  payload_freshness.rs  references.rs  service.rs
rust_sqlx_connection_test/src/signals/: angles.rs  aspect_signals.rs  clusters.rs  constants.rs  context.rs  dignity.rs  dignity_helpers.rs  limits.rs  mod.rs  positions.rs  utils.rs
(+1065 files in other folders)
