[workspace]
resolver = "2"
members = [
    "astral_contracts",
    "astral_calculator",
    "astral_calculator_api",
    "astral_gateway",
    "astral_time_window",
    "astral_llm/crates/astral_llm_domain",
    "astral_llm/crates/astral_llm_application",
    "astral_llm/crates/astral_llm_providers",
    "astral_llm/crates/astral_llm_infra",
    "astral_llm/crates/astral_llm_api",
    "astral_llm/crates/astral_llm_worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
jsonschema = "0.18"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

astral_contracts = { path = "astral_contracts" }
astral_calculator = { path = "astral_calculator" }
astral_llm_domain = { path = "astral_llm/crates/astral_llm_domain" }
astral_llm_application = { path = "astral_llm/crates/astral_llm_application" }
astral_llm_providers = { path = "astral_llm/crates/astral_llm_providers" }
astral_llm_infra = { path = "astral_llm/crates/astral_llm_infra" }
astral_time_window = { path = "astral_time_window" }
