[package]
name = "astral_calculator"
version = "0.1.0"
edition = "2021"
default-run = "astral_calculator"

[dependencies]
astral_contracts.workspace = true
astral_time_window.workspace = true
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
swiss_eph = { package = "swiss-eph", version = "0.2.1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
swisseph-engine = ["dep:swiss_eph"]
test-utils = []

[dev-dependencies]
jsonschema = "0.18"

[[test]]
name = "aspects_tests"
path = "../tests/aspects_tests.rs"

[[test]]
name = "dignities_tests"
path = "../tests/dignities_tests.rs"

[[test]]
name = "facts_tests"
path = "../tests/facts_tests.rs"

[[test]]
name = "idempotency_tests"
path = "../tests/idempotency_tests.rs"

[[test]]
name = "main_tests"
path = "../tests/main_tests.rs"

[[test]]
name = "payload_tests"
path = "../tests/payload_tests.rs"

[[test]]
name = "payload_shared_characterization_tests"
path = "../tests/payload_shared_characterization_tests.rs"

[[test]]
name = "runtime_tests"
path = "../tests/runtime_tests.rs"

[[test]]
name = "signals_tests"
path = "../tests/signals_tests.rs"

[[test]]
name = "contract_basic_v8_tests"
path = "../tests/contract_basic_v8_tests.rs"

[[test]]
name = "engine_contract_tests"
path = "../tests/engine_contract_tests.rs"

[[test]]
name = "simplified_natal_tests"
path = "../tests/simplified_natal_tests.rs"
required-features = ["test-utils"]

[[test]]
name = "swisseph_smoke_tests"
path = "../tests/swisseph_smoke_tests.rs"
required-features = ["swisseph-engine"]

[[test]]
name = "horoscope_builders_tests"
path = "../tests/horoscope_builders_tests.rs"

[[test]]
name = "refactor_governance_tests"
path = "../tests/refactor_governance_tests.rs"
