[package]
name = "astral_contracts"
version.workspace = true
edition.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[[test]]
name = "contracts_registry_tests"
path = "../tests/contracts_registry_tests.rs"

[[test]]
name = "inline_tests_governance_tests"
path = "../tests/inline_tests_governance_tests.rs"
