# Workspace astral_llm — permet `cargo test` depuis ce repertoire.
# Les memes crates sont aussi membres du workspace racine (depot parent).
[workspace]
resolver = "2"
members = [
    "crates/astral_llm_domain",
    "crates/astral_llm_application",
    "crates/astral_llm_providers",
    "crates/astral_llm_infra",
    "crates/astral_llm_api",
]
default-members = ["crates/astral_llm_api"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
jsonschema = "0.18"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

astral_contracts = { path = "../astral_contracts" }
astral_calculator = { path = "../astral_calculator" }
astral_llm_domain = { path = "crates/astral_llm_domain" }
astral_llm_application = { path = "crates/astral_llm_application" }
astral_llm_providers = { path = "crates/astral_llm_providers" }
astral_llm_infra = { path = "crates/astral_llm_infra" }
astral_time_window = { path = "../astral_time_window" }
