[package]
name = "astral_llm_api"
version.workspace = true
edition.workspace = true
default-run = "astral_llm_api"

[[bin]]
name = "astral_llm_api"
path = "src/main.rs"

[[test]]
name = "astral_llm_tests"
path = "../../../tests/astral_llm_tests.rs"
harness = true

[dependencies]
astral_llm_application.workspace = true
astral_llm_domain.workspace = true
astral_llm_infra.workspace = true
astral_llm_providers.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
astral_llm_application.workspace = true
astral_llm_domain.workspace = true
astral_llm_infra.workspace = true
astral_llm_providers.workspace = true
serde_json.workspace = true
tokio.workspace = true
