[package]
name = "astral_llm_api"
version.workspace = true
edition.workspace = true
default-run = "astral_llm_api"

[lib]
name = "astral_llm_api"
path = "src/lib.rs"

[[bin]]
name = "astral_llm_api"
path = "src/main.rs"

[[test]]
name = "astral_llm_tests"
path = "../../../tests/astral_llm_tests.rs"
harness = true

[[test]]
name = "astral_llm_injection_tests"
path = "../../../tests/astral_llm_injection_tests.rs"
harness = true

[[test]]
name = "prompt_golden_tests"
path = "../../../tests/prompt_golden_tests.rs"
harness = true

[[test]]
name = "astral_llm_editorial_fixtures"
path = "../../../tests/astral_llm_editorial_fixtures.rs"
harness = true

[[test]]
name = "astral_llm_load_tests"
path = "../../../tests/astral_llm_load_tests.rs"
harness = true

[[test]]
name = "astral_llm_astro_basis_tests"
path = "../../../tests/astral_llm_astro_basis_tests.rs"
harness = true

[[test]]
name = "astral_llm_evidence_planner_tests"
path = "../../../tests/astral_llm_evidence_planner_tests.rs"
harness = true

[[test]]
name = "astral_llm_evidence_coherence_tests"
path = "../../../tests/astral_llm_evidence_coherence_tests.rs"
harness = true

[[test]]
name = "astral_llm_i18n_tests"
path = "../../../tests/astral_llm_i18n_tests.rs"
harness = true

[[test]]
name = "astral_llm_provider_catalog_tests"
path = "../../../tests/astral_llm_provider_catalog_tests.rs"
harness = true

[[test]]
name = "astral_llm_interpretation_profile_tests"
path = "../../../tests/astral_llm_interpretation_profile_tests.rs"
harness = true

[[test]]
name = "contracts_publish_tests"
path = "../../../tests/contracts_publish_tests.rs"
harness = true

[[test]]
name = "astral_llm_simplified_reading_tests"
path = "../../../tests/astral_llm_simplified_reading_tests.rs"
harness = true

[[test]]
name = "integration_services_tests"
path = "../../../tests/integration_services_tests.rs"
harness = true

[[test]]
name = "integration_jobs_tests"
path = "../../../tests/integration_jobs_tests.rs"
harness = true

[[test]]
name = "horoscope_tests"
path = "../../../tests/horoscope_tests.rs"
harness = true

[dependencies]
astral_llm_application.workspace = true
astral_llm_domain.workspace = true
astral_llm_infra.workspace = true
astral_llm_providers.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
schemars.workspace = true
sha2.workspace = true
astral_llm_application.workspace = true
astral_llm_domain.workspace = true
astral_llm_infra.workspace = true
astral_llm_providers.workspace = true
dotenvy.workspace = true
secrecy.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
