[package]
name = "astral_llm_application"
version.workspace = true
edition.workspace = true

[dependencies]
astral_contracts.workspace = true
astral_calculator.workspace = true
astral_llm_domain.workspace = true
astral_llm_providers.workspace = true
async-trait.workspace = true
jsonschema.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
uuid.workspace = true
astral_llm_infra.workspace = true
astral_time_window.workspace = true
regex.workspace = true
reqwest.workspace = true
chrono.workspace = true
chrono-tz = "0.10"

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

[[test]]
name = "text_reprocessing_application_tests"
path = "../../../tests/text_reprocessing_application_tests.rs"

[[test]]
name = "integration_job_executor_tests"
path = "../../../tests/integration_job_executor_tests.rs"

[[test]]
name = "chapter_quality_repair_tests"
path = "../../../tests/chapter_quality_repair_tests.rs"

[[test]]
name = "reading_quality_validator_tests"
path = "../../../tests/reading_quality_validator_tests.rs"

[[test]]
name = "horoscope_application_builders_tests"
path = "../../../tests/horoscope_application_builders_tests.rs"

[[test]]
name = "trace_runtime_settings_tests"
path = "../../../tests/trace_runtime_settings_tests.rs"

[[test]]
name = "reading_persistence_tests"
path = "../../../tests/reading_persistence_tests.rs"

[[test]]
name = "astral_llm_catalog_view_tests"
path = "../../../tests/astral_llm_catalog_view_tests.rs"
