[package]
name = "astral_llm_domain"
version.workspace = true
edition.workspace = true

[dependencies]
astral_contracts.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[test]]
name = "text_reprocessing_domain_tests"
path = "../../../tests/text_reprocessing_domain_tests.rs"
