[package]
name = "astral_llm_infra"
version.workspace = true
edition.workspace = true

[dependencies]
astral_llm_domain.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
