[package]
name = "astral_llm_infra"
version.workspace = true
edition.workspace = true

[dependencies]
astral_contracts.workspace = true
astral_llm_domain.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[[test]]
name = "calculator_client_tests"
path = "../../../tests/calculator_client_tests.rs"

[[test]]
name = "app_config_env_tests"
path = "../../../tests/app_config_env_tests.rs"

[[test]]
name = "natal_explanation_persistence_db_tests"
path = "../../../tests/natal_explanation_persistence_db_tests.rs"
