[package]
name = "astral_llm_providers"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
astral_llm_domain.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
