[package]
name = "astral_llm_providers"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
astral_llm_domain.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
astral_llm_domain.workspace = true
astral_llm_application.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[test]]
name = "openai_provider_adapter_tests"
path = "../../../tests/openai_provider_adapter_tests.rs"

[[test]]
name = "anthropic_mistral_provider_adapter_tests"
path = "../../../tests/anthropic_mistral_provider_adapter_tests.rs"
